tenants/team-gateway/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-gateway-dev
  labels:
    app.kubernetes.io/managed-by: flux
    app.kubernetes.io/part-of: gitops-platform
    tenant: team-gateway
    environment: dev
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
